# tidi

./: .gitignore  LICENSE  README.md  api.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: fastapi1.py  fastapi2.py  fastapi_app.py
test_tidi/: autocompose_composition.py  context_composition.py  duplicate_id_composition.py  resolver_composition.py  scope_composition.py  test_autocompose.py  test_conditions.py  test_context.py  test_duplicate_id.py  test_name_and_age.py  test_resolver.py  test_scope.py
test_tidi/composition_root/: autocompose.py  scopes.py
test_tidipy/: autocompose_composition.py  context_composition.py  resolver_composition.py  scope_composition.py  test_autocompose.py  test_context.py  test_duplicate_id.py  test_resolver.py  test_scope.py
test_tidipy/resolver_composition/: buzz.py
test_tidipy/resolver_composition/composers/: composers.py
tidi/: __init__.py  autocompose.py  composer.py  conditional_values.py  conditions.py  dependency_bag.py  resolver.py  scan.py  scope.py  scope_context.py  scope_manager.py  scope_manager_api.py  scopetype.py
tidipy/: __init__.py  auto_compose.py  auto_factory.py  autocompose.py  children.py  composer.py  composer_decorator.py  composer_repository.py  conditions.py  context_filter.py  dependency.py  dependency_bag.py  resolve_from_dependency_bag.py  resolver.py  root_scope_provider.py  scan.py  scope.py  scope_api.py  scope_context.py  scope_manager.py  scope_manager_api.py  scope_type.py
