[project]
name = "tidipy"
version = "0.3.0"
description = "A minimalist, opinionated dependency injection framework"
authors = [{ name = "Timber Kerkvliet", email = "timberkerkvliet@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
urls = { "Homepage" = "https://github.com/timberkerkvliet/tidipy", "Repository" = "https://github.com/timberkerkvliet/tidipy" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test_tidi"]